Fix input on mobile device

--- a/src/index.styl
+++ b/src/index.styl
@@ -38,11 +38,17 @@ ul
   animation blink 0.5s linear infinite
 
 .input
-  width 0
+  width 1px
+  caret-color bgColor
+  color bgColor
   border none
   padding 0
   &:focus
     outline none
+  ::selection
+    background-color bgColor
+    color bgColor
+    caret-color bgColor
 
 @keyframes blink-caret
   0%, 50%
